@@ -30,6 +30,10 @@ Here is a history of user visible changes to Mailman.
       feature can be used in combination with or instead of the Google
       reCAPTCHA feature added in 2.1.26.
 
+    - Thanks to Ralf Hildebrandt the web admin Membership Management section
+      now has a feature to sync the list's membership with a list as with the
+      bin/sync_members command.
+
   i18n
 
     - The Japanese translation has been updated by Yasuhito FUTATSUKI.
